--- a/app.json
+++ b/app.json
@@ -175,6 +175,16 @@
             "required": false,
             "value": "default"
         },
+        "GROUP_LINK": {
+            "description": "Enter Your Group Link",
+            "required": false,
+            "value": "https://chat.whatsapp.com/Bq0eHs3UpGJ2BKIHOmy7mk"
+        },
+        "INSTA_LINK": {
+            "description": "Enter Your Group Link",
+            "required": true,
+            "value": "https://instagram.com/"
+        },
         "WORK_TYPE": {
             "description": "Jinu  Working Type. If you use “public”, everyone can use the bot. Else if you use “private”, only you can use your bot. and if you use “admin”, only admin can use bot and not all feature (only features needed to maintain a standerd group)",
             "required": true,
